Changelog
=========

2.11.1 (unreleased)
-------------------

- Add option to also check allowedRolesAndUsers when determining items not up to date in Solr. [njohner]


2.11.0 (2022-07-04)
-------------------

- Add support for language specific fields. [buchi]


2.10.0 (2021-09-21)
-------------------

- Add flag to force clearing solr even when solr is not enabled. [njohner]


2.9.5 (2021-08-17)
------------------

- Add unrestricted_search method. [njohner]


2.9.4 (2021-07-29)
------------------

- SolrDocument returns None for existing fields with missing value. [njohner]


2.9.3 (2021-04-22)
------------------

- Fix indexing of SearchableText only for objects with primary field. [njohner]

2.9.2 (2021-01-13)
------------------

- Do not ignore None values when indexing data in solr. [njohner]


2.9.1 (2020-12-15)
------------------

- Cleanup extract_commands before sending them to solr. [njohner]


2.9.0 (2020-08-04)
------------------

- Treat docs with no created field as out of sync in `diff`. [deiferni]


2.8.6 (2020-06-02)
------------------

- Log maintenance commands to a dedicated logfile. [lgraf]
- Add option to limit items logged in diff, switch default to only diff 5 items. [deiferni]
- Add helper for creating Solr filters from catalog queries.
  [buchi]


2.8.5 (2020-05-06)
------------------

- Make sure maintenance scripts are run as system user. [njohner]


2.8.4 (2020-04-02)
------------------

- Fix update of the modified index. [njohner]


2.8.3 (2020-04-02)
------------------

- Update the modified index to match new rounding of DateTime. [njohner]


2.8.2 (2020-03-27)
------------------

- Fix to_iso8601 prevent rounding errors with DateTime milliseconds above 999500. [deiferni]
- Fix blob extraction for DX items. [mbaechtold]


2.8.1 (2020-02-05)
------------------

- Fix to_iso8601 for years before 1900.
  [deiferni]


2.8.0 (2019-12-06)
------------------

- Add support for uploading blobs to extract handler.
  [lgraf]
