@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<registry>
+  <records interface="ftw.solr.interfaces.ISolrSettings" />
+</registry>
